@@ -31,6 +31,7 @@
 <h1><a href="atari.html">Platform</a></h1>
 <a href="atari.html">Atari</a>
 <a href="nes.html">NES</a>
+<a href="c64.html">C64</a>
 <a href="atmos.html">Oric Atmos</a>
 <h1><a href="download/atalan.zip">Download</a></h1>
 <a href="download/atalan.zip">Download</a>
